# src/main/java/com/auction/auction_system/entities/enums/AuctionListingState.java
@@ -1,5 +1,5 @@
 package com.auction.auction_system.entities.enums;
 
-public enum AuctionListingStatus {
+public enum AuctionListingState {
   PENDING, ACTIVE, CLOSED, CANCELLED, COMPLETED
 }
